# bayesian-crop-yield-forecasting

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  research_log.md  setup.py
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml
config/: config.yaml
config/crops/: kilifi_crops.yaml
data/samples/: nasa_power_sample.json  nass_quickstats_sample.json
docs/: DEVELOPER_GUIDELINES.txt  INVARIANTS.md  learning-resources.md
docs/data_cards/: DC-kalro-kilifi-crops.md  DC-nasapower-weather.md  DC-usda-nass-quickstats.md  README.md
notebooks/: TEMPLATE.ipynb
notebooks/data/: acquisition.ipynb
notebooks/exploration/: 01_initial_profiling.ipynb  02_missing_values.ipynb  03_encoding.ipynb  04_correlation.ipynb  05_hypothesis_tests.ipynb  06_outliers.ipynb  07_scaling.ipynb  08_linear_regression.ipynb  09_logistic_regression.ipynb  10_regularization.ipynb
reports/analysis/: 2026-07-06-kfi-borrow-analysis.md  2026-07-08-guidelines-self-audit.md
reports/verification/: 2026-07-06T19-48-53Z.json  2026-07-06T19-51-41Z.json  2026-07-06T19-51-41Z.md  2026-07-06T20-20-12Z.json  2026-07-06T20-20-12Z.md  2026-07-06T21-59-17Z.json  2026-07-06T21-59-17Z.md  2026-07-06T21-59-44Z.json  2026-07-06T21-59-44Z.md  2026-07-06T23-13-39Z.json  2026-07-06T23-13-39Z.md  (+31 more)
scripts/: claude_review.sh  codex_review.sh  deepseek-shell  deepseek_review.sh  gemini_review.sh  glm-shell  glm_review.sh  kimi-shell  kimi_review.sh  reconcile_reviews.sh
src/: __init__.py  curriculum_ledger.py
src/data/: loader.py  (+2 more)
tools/: check_data_cards.py  check_guidelines.py  check_notebooks.py  verify.py
(+69 files in other folders)
